# zeckendorf

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.txt  README.md  bright-builds-rules.audit.md  build.rs  package.json  standards-overrides.md
.bright-builds-rules-backups/20260425T153336Z/: README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml
benches/: fibonacci_bench.rs  zeckendorf_bench.rs
examples/: generate_statistics.rs  playground.rs  plot.rs  shared.rs  spiral.rs
research/: .gitignore  HANDOFF.md  PROGRAM.md  README.md  prepare.ts
research/configs/: baseline.toml
research/corpus/real/: gettysburg_address.txt  sample_records.json  sample_table.csv
research/scripts/: log_result.ts  summarize.ts
scripts/: build_wasm_bundle.sh  cargo_clippy.sh  cargo_npm_publish_and_tag.sh  cargo_publish.sh  cargo_publish_and_tag.sh  gen_flamegraph.sh  gen_samply_flamegraph.sh  git_tag_current_version.sh  npm_publish.sh  poll_rss.sh
src/: lib.rs  main.rs  zeck_file_format.rs
src/research/: config.rs  eval.rs  mod.rs  pipeline.rs  preprocessors.rs
src/zeck_file_format/: compress.rs  decompress.rs  error.rs  file.rs
statistics_history/: sampled_statistics_up_to_5000_bits.csv  sampled_statistics_up_to_5000_bits.csv.csv  statistics_up_to_100000000_inputs.csv  statistics_up_to_1000000_inputs.csv  statistics_up_to_100000_inputs.csv  wide_scale_sampled_statistics_up_to_100000_bits.csv
