[package]
name = "zeckendorf"
version = "0.1.0"
edition = "2024"
authors = ["Peter Ryszkiewicz"]
description = "A Rust library for compressing and decompressing data using the Zeckendorf representation algorithm"
license = "MIT"
readme = "README.md"
keywords = ["compression", "zeckendorf", "fibonacci", "algorithm", "data-compression"]
categories = ["compression", "algorithms", "mathematics"]
repository = "https://github.com/pRizz/zeckendorf"

[lib]
name = "zeckendorf_rs"
path = "src/lib.rs"

[features]
default = []
plotting = ["dep:plotters"]

[dependencies]
num-bigint = "0.4.6"
num-format = { version = "0.4.4", features = ["num-bigint"] }
num-traits = "0.2.19"
plotters = { version = "0.3.7", optional = true }
rand = "0.9.2"
wasm-bindgen = "0.2.106"

[[bin]]
name = "generate_data"
path = "src/bin/generate_data.rs"

[[bin]]
name = "plot"
path = "src/bin/plot.rs"
required-features = ["plotting"]

[[bin]]
name = "generate_statistics"
path = "src/bin/generate_statistics.rs"
required-features = ["plotting"]

[[bench]]
name = "zeckendorf_bench"
harness = false

[[bench]]
name = "fibonacci_bench"
harness = false

[dev-dependencies]
criterion = { version = "0.8.1", features = ["csv_output", "html_reports"] }
