[package]
name = "zeck"
version = "0.6.0"
edition = "2024"
authors = ["Peter Ryszkiewicz"]
description = "A Rust library for compressing and decompressing data using the Zeckendorf representation algorithm"
license = "MIT"
readme = "README.md"
keywords = ["compression", "zeckendorf", "fibonacci", "algorithm", "data-compression"]
categories = ["compression", "algorithms", "mathematics"]
repository = "https://github.com/pRizz/zeckendorf"
exclude = [
    ".vscode/",
    "generated_data/",
    "plots/",
    "pkg/",
    "scripts/",
    "statistics_history/",
    "flamegraph.svg",
    "profile.json.gz",
    "target/",
]

[lib]
name = "zeck"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
plotting = ["dep:plotters"]
development_tools = []

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
num-bigint = "0.4.6"
num-format = { version = "0.4.4", features = ["num-bigint"] }
num-traits = "0.2.19"
plotters = { version = "0.3.7", optional = true }
rand = "0.9.2"
wasm-bindgen = "0.2.106"

[[bin]]
name = "zeck-playground"
path = "src/main.rs"
required-features = ["development_tools"]

[[bin]]
name = "zeck-generate-data"
path = "src/bin/generate_data.rs"
required-features = ["development_tools"]

[[bin]]
name = "zeck-plot"
path = "src/bin/plot.rs"
required-features = ["plotting", "development_tools"]

[[bin]]
name = "zeck-generate-statistics"
path = "src/bin/generate_statistics.rs"
required-features = ["plotting", "development_tools"]

[[bin]]
name = "zeck-compress"
path = "src/bin/zeck-compress.rs"

[[bin]]
name = "zeck-decompress"
path = "src/bin/zeck-decompress.rs"

[[bench]]
name = "zeckendorf_bench"
harness = false

[[bench]]
name = "fibonacci_bench"
harness = false

[dev-dependencies]
criterion = { version = "0.8.1", features = ["csv_output", "html_reports"] }
