[package]
name = "zeck"
version = "3.0.0"
edition = "2024"
authors = ["Peter Ryszkiewicz"]
description = "A Rust library for compressing and decompressing data using the Zeckendorf representation algorithm"
license = "MIT"
readme = "README.md"
keywords = ["compression", "zeckendorf", "fibonacci", "algorithm", "data-compression"]
categories = ["compression", "algorithms", "mathematics"]
repository = "https://github.com/pRizz/zeckendorf.git"
exclude = [
    ".github/",
    ".vscode/",
    "generated_data/",
    "plots/",
    "pkg/",
    "scripts/",
    "statistics_history/",
    "flamegraph.svg",
    "profile.json.gz",
    "target/",
]

[lib]
name = "zeck"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
cli_tools = ["dep:clap"]
development_tools = ["dep:rand"]

[dependencies]
clap = { version = "4.5.54", features = ["derive"], optional = true }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = { version = "0.9.2", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tsify = "0.5.6"
wasm-bindgen = "0.2.106"

[[example]]
name = "playground"
path = "examples/playground.rs"

[[bin]]
name = "zeck-generate-data"
path = "src/bin/generate_data.rs"
required-features = ["development_tools"]

[[example]]
name = "plot"
path = "examples/plot.rs"

[[example]]
name = "generate-statistics"
path = "examples/generate_statistics.rs"

[[bin]]
name = "zeck-compress"
path = "src/bin/zeck-compress.rs"
required-features = ["cli_tools"]

[[bin]]
name = "zeck-decompress"
path = "src/bin/zeck-decompress.rs"
required-features = ["cli_tools"]

[[bench]]
name = "zeckendorf_bench"
harness = false

[[bench]]
name = "fibonacci_bench"
harness = false

[dev-dependencies]
criterion = { version = "0.8.1", features = ["csv_output", "html_reports"] }
num-format = { version = "0.4.4", features = ["num-bigint"] }
plotters = { version = "0.3.7" }
rand = "0.9.2"
